--- a/css/layer.scss
+++ b/css/layer.scss
@@ -6,8 +6,8 @@ html {
 }
 body {
     box-sizing: border-box;
-    background: #F3F3F3;
-    color: #333333;
+    background: #fff;
+    color: #444444;
     padding: 0 !important;  
     font-size: 20px;  
     line-height: 1.6;
@@ -53,5 +53,94 @@ body {
     }
     .slick-slider {
         margin-bottom: 0;
+    }
+}
+
+.header-top {
+    padding: 15px 0;
+    .h-regis {
+        margin-right: 50px;
+    }
+}
+
+.h-menu {
+    font-size: 15px;
+    font-weight: 500;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    ul {
+        list-style: none;
+        display: flex;
+        align-items: center;
+    }
+}
+.menu-pc {
+    ul {
+        li {
+            margin-right: 50px;
+        }
+    }
+}
+.translate {
+    ul {
+        li {
+            margin-right: 15px;
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
+}
+
+footer {
+    background: url(../images/bg-fter.png) no-repeat center;
+    background-size: cover;
+    color: #fff;
+}
+.txt-fter {
+    padding: 50px 0;
+    color: #fff;
+    font-weight: 300;
+    border-bottom: 1px solid #4D7EBF;
+    h2 {
+        font-size: 32px;
+        font-weight: 600;
+        margin-bottom: 40px;
+    }
+    .desc {
+        max-width: 875px;
+        margin: 0 auto;
+    }
+}
+.copyright {
+    padding: 25px 0;
+    font-size: 15px;
+    font-weight: 300;
+    ul {
+        list-style: none;
+        display: flex;
+        justify-content: flex-end;
+        li {
+            margin-right: 20px;
+            &:last-child {
+                margin-right: 0;
+            }
+        }
+    }
+    a {
+        color: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid #fff;
+        border-radius: 100%;
+        width: 40px;
+        height: 40px;
+        font-size: 20px;
+        &:hover {
+            color: #E18C44;
+            background: #fff;
+        }
     }
 }
