--- a/css/style.css
+++ b/css/style.css
@@ -110,13 +110,25 @@
   font-weight: 600;
   font-style: italic;
   font-display: swap; }
+@font-face {
+  font-family: 'Cormorant';
+  src: url("../fonts/CormorantGaramond-SemiBold.woff2") format("woff2"), url("../fonts/CormorantGaramond-SemiBold.woff") format("woff");
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap; }
+@font-face {
+  font-family: 'Cormorant';
+  src: url("../fonts/CormorantGaramond-Bold.woff2") format("woff2"), url("../fonts/CormorantGaramond-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+  font-display: swap; }
 html {
   overflow-x: hidden; }
 
 body {
   box-sizing: border-box;
-  background: #F3F3F3;
-  color: #333333;
+  background: #fff;
+  color: #444444;
   padding: 0 !important;
   font-size: 20px;
   line-height: 1.6;
@@ -151,5 +163,361 @@ body {
     max-width: 100%; }
   body .slick-slider {
     margin-bottom: 0; }
+
+.header-top {
+  padding: 15px 0; }
+  .header-top .h-regis {
+    margin-right: 50px; }
+
+.h-menu {
+  font-size: 15px;
+  font-weight: 500;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center; }
+  .h-menu ul {
+    list-style: none;
+    display: flex;
+    align-items: center; }
+
+.menu-pc ul li {
+  margin-right: 50px; }
+
+.translate ul li {
+  margin-right: 15px; }
+  .translate ul li:last-child {
+    margin-right: 0; }
+
+footer {
+  background: url(../images/bg-fter.png) no-repeat center;
+  background-size: cover;
+  color: #fff; }
+
+.txt-fter {
+  padding: 50px 0;
+  color: #fff;
+  font-weight: 300;
+  border-bottom: 1px solid #4D7EBF; }
+  .txt-fter h2 {
+    font-size: 32px;
+    font-weight: 600;
+    margin-bottom: 40px; }
+  .txt-fter .desc {
+    max-width: 875px;
+    margin: 0 auto; }
+
+.copyright {
+  padding: 25px 0;
+  font-size: 15px;
+  font-weight: 300; }
+  .copyright ul {
+    list-style: none;
+    display: flex;
+    justify-content: flex-end; }
+    .copyright ul li {
+      margin-right: 20px; }
+      .copyright ul li:last-child {
+        margin-right: 0; }
+  .copyright a {
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #fff;
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    font-size: 20px; }
+    .copyright a:hover {
+      color: #E18C44;
+      background: #fff; }
+
+.btn-main a {
+  background: #E18C44;
+  border-radius: 5px;
+  height: 50px;
+  display: inline-flex;
+  align-items: center;
+  color: #fff;
+  font-weight: 600;
+  padding: 0 30px;
+  text-transform: uppercase;
+  font-size: 15px; }
+
+.title {
+  font-family: 'Cormorant';
+  margin-bottom: 40px; }
+  .title h2 {
+    font-weight: 700;
+    color: #012F6D;
+    font-size: 40px;
+    line-height: initial; }
+
+.box-about {
+  padding: 80px 0;
+  background: #FAFAFA; }
+
+.txt-about {
+  max-width: 1045px;
+  margin: 0 auto 50px auto; }
+
+.video-about {
+  position: relative;
+  overflow: hidden;
+  border-radius: 20px; }
+
+.icon-video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.box-linhvuc {
+  padding: 65px 0; }
+
+.item-linhvuc {
+  position: relative;
+  overflow: hidden;
+  border-radius: 20px; }
+  .item-linhvuc:after {
+    content: "";
+    width: 100%;
+    height: 100%;
+    background: #012F6D;
+    opacity: 0.7;
+    border-radius: 20px;
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .item-linhvuc .info {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    padding: 22px;
+    z-index: 2;
+    text-transform: capitalize; }
+    .item-linhvuc .info a {
+      font-weight: 600;
+      display: block;
+      line-height: 1.4;
+      color: #fff !important; }
+  .item-linhvuc .info-abs {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    padding: 30px;
+    color: #fff;
+    z-index: 3;
+    background: linear-gradient(180deg, #FFF359 0%, #E18C44 76.91%);
+    border-radius: 20px;
+    transition: .6s all !important;
+    transform: scale(0); }
+    .item-linhvuc .info-abs a {
+      color: #012F6D !important;
+      display: block;
+      font-size: 26px;
+      font-weight: 600;
+      text-align: center;
+      line-height: 1.4;
+      margin-bottom: 30px; }
+    .item-linhvuc .info-abs .desc {
+      color: #000000;
+      font-size: 15px;
+      font-weight: 400;
+      text-align: center; }
+  .item-linhvuc:hover .info-abs {
+    transform: scale(1); }
+
+.list-linhvuc .col-md-4 {
+  padding: 15px; }
+
+.item-benn .icon {
+  position: relative;
+  margin-bottom: 30px; }
+  .item-benn .icon span {
+    color: #012F6D;
+    font-family: 'Cormorant';
+    font-size: 70px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    left: 0;
+    top: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+.item-benn .info h3 {
+  margin-bottom: 20px;
+  color: #012F6D;
+  font-size: 20px;
+  font-weight: 600; }
+.item-benn .info .desc {
+  color: #555555;
+  font-size: 15px; }
+
+.box-benefit {
+  padding: 0 0 80px 0; }
+
+.box-infopages {
+  background: #FAFAFA;
+  padding: 80px 0; }
+
+.item-inf-page {
+  background: #FFFFFF;
+  box-shadow: 0px 8px 10px #0009811a;
+  border-radius: 20px;
+  height: 100%; }
+  .item-inf-page h4 {
+    background: linear-gradient(180deg, #FFF359 -25.63%, #E18C44 89.43%);
+    border-radius: 20px 20px 0px 0px;
+    color: #fff;
+    font-size: 25px;
+    font-weight: 600;
+    line-height: initial;
+    padding: 15px 10px;
+    text-shadow: 1px 1px 2px #00000040; }
+  .item-inf-page .info {
+    padding: 25px;
+    font-size: 15px; }
+    .item-inf-page .info p {
+      margin-bottom: 10px; }
+    .item-inf-page .info ul {
+      padding-left: 18px;
+      list-style: none; }
+      .item-inf-page .info ul li {
+        margin-bottom: 6px;
+        position: relative; }
+        .item-inf-page .info ul li:after {
+          content: "";
+          background: #E18C44;
+          width: 6px;
+          height: 6px;
+          transform: rotate(45deg);
+          left: -18px;
+          top: 8px;
+          position: absolute;
+          border-radius: 1px; }
+  .item-inf-page.item-tieuchi h4 {
+    background: linear-gradient(180deg, #486AE2 -12.5%, #002F6C 100%); }
+
+.box-brief {
+  padding: 0 0 80px 0;
+  background: #FAFAFA; }
+
+.list-info-brief {
+  background: #FFFFFF;
+  box-shadow: 0px 8px 10px #0009811a;
+  border-radius: 0 0 20px 20px;
+  font-size: 15px;
+  overflow: hidden;
+  font-weight: 400; }
+  .list-info-brief ul {
+    list-style: none; }
+
+.content-brief {
+  display: none;
+  padding: 30px 50px; }
+  .content-brief.active {
+    display: block; }
+  .content-brief ul li {
+    margin-bottom: 10px;
+    position: relative;
+    padding-left: 18px; }
+    .content-brief ul li:after {
+      content: "";
+      background: #E18C44;
+      width: 6px;
+      height: 6px;
+      transform: rotate(45deg);
+      left: 0;
+      top: 8px;
+      position: absolute;
+      border-radius: 1px; }
+
+.tab-brief ul {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  background: #fff;
+  text-align: center; }
+  .tab-brief ul li {
+    flex: 0 0 20%;
+    max-width: 100%;
+    position: relative;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    background: #dbe6f5;
+    cursor: pointer; }
+    .tab-brief ul li.active, .tab-brief ul li:hover {
+      background: #012f6d; }
+      .tab-brief ul li.active a, .tab-brief ul li:hover a {
+        color: #fff; }
+    .tab-brief ul li:after {
+      content: "";
+      width: 1px;
+      height: 100%;
+      background: #fff;
+      position: absolute;
+      top: 0;
+      right: 0; }
+    .tab-brief ul li:last-child:after {
+      display: none; }
+.tab-brief a {
+  color: #000000;
+  font-size: 15px;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 22px 16px; }
+
+.box-step {
+  padding: 70px 0; }
+
+.box-blog {
+  padding: 70px 0; }
+  .box-blog .btn-main {
+    padding-top: 40px; }
+
+.item-blog {
+  background: #FFFFFF;
+  border: 1px solid #E4E4E4;
+  box-sizing: border-box;
+  border-radius: 20px;
+  overflow: hidden; }
+  .item-blog .info {
+    padding: 30px;
+    color: #555555;
+    font-size: 15px;
+    line-height: 1.5; }
+    .item-blog .info a {
+      color: #202020;
+      display: block;
+      font-size: 20px;
+      font-weight: 600; }
+      .item-blog .info a:hover {
+        color: #012F6D; }
+    .item-blog .info .desc {
+      padding: 15px 0; }
+  .item-blog .more-link a {
+    font-size: 12px;
+    font-weight: 600; }
+    .item-blog .more-link a:hover {
+      color: #E18C44; }
 
 /*# sourceMappingURL=style.css.map */
